[gd_scene load_steps=4 format=3 uid="uid://bwocm8pq1npwr"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_pyy4q"]
[ext_resource type="FontFile" uid="uid://bp02ury8u1ev4" path="res://assets/font/pixelfj8pt1/pixelFJ8pt1__.TTF" id="2_2uhvd"]
[ext_resource type="Texture2D" uid="uid://ow3svsw0ahkq" path="res://assets/block_types.png" id="4_0q3qr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyy4q")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(704, 448)
layout_mode = 0
offset_right = 704.0
offset_bottom = 448.0
color = Color(0.0470588, 0.0313726, 0.152941, 1)

[node name="PlayButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 290.0
offset_top = 103.0
offset_right = 420.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 46
text = "Play"
flat = true
icon_alignment = 1

[node name="LVLButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 173.0
offset_top = 181.0
offset_right = 540.0
offset_bottom = 242.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 46
text = "Levels
"
flat = true

[node name="TilesInfoButton" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 170.0
offset_top = 264.0
offset_right = 537.0
offset_bottom = 325.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 46
text = "Tiles info"
flat = true

[node name="Decorations" type="Node2D" parent="."]

[node name="Brick" type="Sprite2D" parent="Decorations"]
texture_filter = 1
position = Vector2(69, 380)
scale = Vector2(2.20254, 2.20254)
texture = ExtResource("4_0q3qr")
vframes = 5

[node name="VSlime" type="Sprite2D" parent="Decorations"]
texture_filter = 1
position = Vector2(624, 353)
scale = Vector2(2.20254, 2.20254)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 1

[node name="HSlime" type="Sprite2D" parent="Decorations"]
texture_filter = 1
position = Vector2(115, 138)
scale = Vector2(2.20254, 2.20254)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 2

[node name="Honey" type="Sprite2D" parent="Decorations"]
texture_filter = 1
position = Vector2(401, 402)
scale = Vector2(2.20254, 2.20254)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 3

[node name="Crate" type="Sprite2D" parent="Decorations"]
texture_filter = 1
position = Vector2(581, 117)
scale = Vector2(2.20254, 2.20254)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 4

[node name="Name" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 47.0
offset_top = 30.0
offset_right = 667.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 34
text = "Dungeon Must Be Completed"

[node name="TilesInfo" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="TilesInfo"]
custom_minimum_size = Vector2(704, 448)
layout_mode = 0
offset_right = 704.0
offset_bottom = 448.0
color = Color(0.0470588, 0.0313726, 0.152941, 1)

[node name="BackButton" type="Button" parent="TilesInfo"]
layout_mode = 0
offset_left = 296.0
offset_top = 385.0
offset_right = 404.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 32
text = "Back"
flat = true

[node name="Control" type="Control" parent="TilesInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 41.0

[node name="Sprite2D6" type="Sprite2D" parent="TilesInfo/Control"]
texture_filter = 1
position = Vector2(171, 50)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0q3qr")
vframes = 5

[node name="Label" type="Label" parent="TilesInfo/Control"]
texture_filter = 1
layout_mode = 0
offset_left = 211.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 20
text = "Block, will be in the next lvl's"

[node name="Control2" type="Control" parent="TilesInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 71.0
offset_right = 15.0
offset_bottom = 111.0

[node name="Sprite2D6" type="Sprite2D" parent="TilesInfo/Control2"]
texture_filter = 1
position = Vector2(171, 50)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 1

[node name="Label" type="Label" parent="TilesInfo/Control2"]
texture_filter = 1
layout_mode = 0
offset_left = 211.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 20
text = "Blue slime, bounce the player up"

[node name="Control3" type="Control" parent="TilesInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 144.0
offset_right = 15.0
offset_bottom = 184.0

[node name="Sprite2D6" type="Sprite2D" parent="TilesInfo/Control3"]
texture_filter = 1
position = Vector2(171, 50)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 2

[node name="Label" type="Label" parent="TilesInfo/Control3"]
texture_filter = 1
layout_mode = 0
offset_left = 211.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 20
text = "Red slime, change player direction"

[node name="Control4" type="Control" parent="TilesInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 216.0
offset_right = 15.0
offset_bottom = 256.0

[node name="Sprite2D6" type="Sprite2D" parent="TilesInfo/Control4"]
texture_filter = 1
position = Vector2(171, 50)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 3

[node name="Label" type="Label" parent="TilesInfo/Control4"]
texture_filter = 1
layout_mode = 0
offset_left = 211.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 20
text = "Honey, hold player even on ceiling"

[node name="Control5" type="Control" parent="TilesInfo"]
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = 288.0
offset_right = 15.0
offset_bottom = 328.0

[node name="Sprite2D6" type="Sprite2D" parent="TilesInfo/Control5"]
texture_filter = 1
position = Vector2(171, 50)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0q3qr")
vframes = 5
frame = 4

[node name="Label" type="Label" parent="TilesInfo/Control5"]
texture_filter = 1
layout_mode = 0
offset_left = 211.0
offset_top = 37.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 20
text = "Crate, will be in the next lvl's"

[node name="Levels" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="Levels"]
custom_minimum_size = Vector2(704, 448)
layout_mode = 0
offset_right = 704.0
offset_bottom = 448.0
color = Color(0.0470588, 0.0313726, 0.152941, 1)

[node name="Label" type="Label" parent="Levels"]
texture_filter = 1
layout_mode = 0
offset_left = 240.0
offset_top = 20.0
offset_right = 488.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 64
text = "Levels"

[node name="BackButton" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 296.0
offset_top = 385.0
offset_right = 404.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 32
text = "Back"
flat = true

[node name="Lvl1" type="Button" parent="Levels"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 102.0
offset_top = 116.0
offset_right = 152.0
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("2_2uhvd")
theme_override_font_sizes/font_size = 40
text = "1"
flat = true
icon_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="LVLButton" to="." method="_on_lvl_button_pressed"]
[connection signal="pressed" from="TilesInfoButton" to="." method="_on_tiles_info_button_pressed"]
[connection signal="pressed" from="TilesInfo/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Levels/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Levels/Lvl1" to="." method="_on_lvl_1_pressed"]
